<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/parchment_bgr">

<RelativeLayout
    android:id="@+id/activity_generate_character"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_character_creation"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/lbl_character_creation"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSemiTransBlue"
        />

    <View
        android:id="@+id/seperator_headline"
        android:layout_below="@id/lbl_character_creation"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorWhite" />

    <LinearLayout
        android:id="@+id/layout_top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/seperator_headline"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/layout_top_section_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lbl_character_creation">

                <TextView
                    android:id="@+id/lbl_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_name"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/lbl_name"
                    android:backgroundTint="@color/colorTransparent"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:textSize="16dp"
                    android:layout_marginLeft="6dp"
                    android:inputType="textNoSuggestions" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/select_race"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/layout_name">

                <TextView
                    android:id="@+id/lbl_race"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/lbl_race"/>

                <Spinner
                    android:id="@+id/race_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="@drawable/parchment_bgr"
                    android:minWidth="150dp"
                    android:dropDownWidth="100dp"
                    android:layout_marginLeft="6dp">
                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/select_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/select_race">

                <TextView
                    android:id="@+id/lbl_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/lbl_class"/>

                <Spinner
                    android:id="@+id/class_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="@drawable/parchment_bgr"
                    android:minWidth="150dp"
                    android:dropDownWidth="100dp">
                </Spinner>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_top_section_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_gold_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/lbl_gold" />

        <RelativeLayout
            android:id="@+id/layout_gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_gold"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/gold"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/lbl_gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30dp"
                android:text="10"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/layout_top_section"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corners"
        />

    <LinearLayout
        android:id="@+id/combat_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txt_description"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_skill_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/attack"
                android:adjustViewBounds="true"
                android:layout_margin="15dp"
                android:alpha="200" />

            <TextView
                android:id="@+id/lbl_skill_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textColor="@color/colorBlack"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_skill_defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/defence"
                android:adjustViewBounds="true"
                android:layout_margin="15dp"
                android:alpha="200" />

            <TextView
                android:id="@+id/lbl_skill_defence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textColor="@color/colorBlack"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/skill_hitpoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/health"
                android:adjustViewBounds="true"
                android:layout_margin="15dp"
                android:alpha="200" />

            <TextView
                android:id="@+id/lbl_skill_hitpoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:textSize="40dp"
                android:textColor="@color/colorBlack"/>

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_abilities"
        android:text="@string/lbl_abilities"
        android:textSize="22dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorSemiTransGray"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/combat_skills"/>

    <GridLayout
        android:id="@+id/gridStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lbl_abilities"
        android:columnCount="6"
        android:rowCount="7"
        android:background="@color/colorSemiTransBlue"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/ability"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/lbl_ability"
            android:textStyle="bold"
            android:background="@color/colorSemiTransGray"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/raw_roll"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/lbl_roll"
            android:textStyle="bold"
            android:background="@color/colorSemiTransGray"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/raw_bonus"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/lbl_bonus"
            android:textStyle="bold"
            android:background="@color/colorSemiTransGray"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/race"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/txt_race"
            android:textStyle="bold"
            android:background="@color/colorSemiTransGray"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/char_class"
            android:layout_column="4"
            android:layout_row="0"
            android:text="@string/txt_class"
            android:textStyle="bold"
            android:background="@color/colorSemiTransGray"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/total"
            android:layout_column="5"
            android:layout_row="0"
            android:text="@string/lbl_total"
            android:textStyle="bold"
            android:background="@color/colorSemiTransGray"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:paddingLeft="5dp"/>

        <TextView
            android:id="@+id/ability_str"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/lbl_str"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp" />

        <TextView
            android:id="@+id/ability_con"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/lbl_con"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/ability_ag"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/lbl_ag"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/ability_int"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/lbl_int"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/ability_wis"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/lbl_wis"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/ability_pre"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/lbl_pre"
            android:textColor="@color/colorWhite"
            android:paddingLeft="10dp"/>
    </GridLayout>

    <Button
        android:id="@+id/btnRerollStats"
        android:layout_below="@id/gridStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_reroll_stats"
        android:background="@color/colorSemiTransBlueGray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/btnAcceptCharacter"
        android:layout_below="@id/btnRerollStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_accept"
        android:background="@color/colorSemiTransBlueGray"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

</RelativeLayout>

</ScrollView>
