<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/parchment_bgr"
    tools:context="com.soe.ishibori.stagesofexperience.merchant_guild_act">

<LinearLayout
    android:id="@+id/activity_merchant_guild_act"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_merchant_guild"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/lbl_merchant_guild_headline"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSemiTransBlue"
            />

    <View
        android:id="@+id/seperator_headline"
        android:layout_below="@id/lbl_merchant_guild"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorWhite" />

    <TextView
        android:id="@+id/lbl_merchant_Inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_merchant_inventory"
        android:gravity="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSemiTransGray"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/merchant_guild_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:minHeight="50dp"
        android:maxHeight="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorSemiTransBlue"
        android:padding="10dp">
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/lbl_your_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorSemiTransGray">

    <TextView
        android:id="@+id/lbl_character_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_character_inventory"
        android:textSize="22dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:layout_centerInParent="true"
        />

        <RelativeLayout
            android:id="@+id/layout_gold"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/lbl_character_inventory"
            android:layout_marginLeft="10dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/img_gold"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/gold"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/lbl_gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22dp"
                android:text="10"
                android:layout_centerInParent="true"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

    <!--<LinearLayout
        android:id="@+id/layout_top_section_right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_gold_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/lbl_gold"
            android:textColor="@color/colorBlack"/>

    </LinearLayout> -->

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/character_inventory_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:minHeight="50dp"
        android:maxHeight="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorSemiTransBlue"
        android:padding="10dp">
    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/btn_to_adventure"
        android:gravity="center"
        android:layout_margin="15dp"
        android:background="@color/colorSemiTransBlueGray"/>

    </LinearLayout>
</ScrollView>
